add swagger for auth api
